<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@android:color/white"
    tools:context=".ForgotActivity">



    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_name"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/ins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/name"
        android:text="@string/forgot_ins"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/ins"
        android:id="@+id/linear1">
        <EditText
            android:id="@+id/id1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/darker_gray"
            android:backgroundTint="@color/colorPrimary"
            android:lines="1"
            android:hint="License"
            android:layout_marginLeft="45dp"
            android:maxLength="4"

            />
        <EditText
            android:id="@+id/id2"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/darker_gray"
            android:backgroundTint="@color/colorPrimary"
            android:lines="1"
            android:inputType="number"
            android:hint="Number"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="45dp"
            android:maxLength="11"

            />
    </LinearLayout>
    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/linear1"
        android:layout_marginTop="50dp"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:text="@string/forgot_reset"
        android:textSize="15sp"
        android:background="@drawable/bg_button_rounded"
        android:textColor="@android:color/white"/>


</RelativeLayout>