<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.afinal.android.trafficpal1.ThirdFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:layout_above="@id/linear">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:layout_marginTop="10dp"
                android:text="@string/contact_form_name"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/your_name"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="14sp" />



            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/contact_form_subject"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/your_subject"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="14sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="32dp"
                android:paddingLeft="3dp"
                android:text="@string/contact_form_message"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/your_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:height="170dp"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:textSize="14sp" />

            <Button
                android:id="@+id/post_message"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_button_rounded"
                android:layout_marginTop="10dp"
                android:layout_marginRight="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginBottom="10dp"
                android:text="@string/contact_form_button"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:textSize="15sp"
            android:layout_height="40dp"
            android:text="Do you want to Logout?"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/logout"
            />

        <Button
            android:id="@+id/logout3"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:text="Logout"
            android:textSize="15dp"
            android:layout_toRightOf="@+id/logout"
            android:background="@drawable/bg_button_rounded"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/white"
            />
    </LinearLayout>


</RelativeLayout>
